test/unit/components/dialogue/scripts/valid/branch-simple.dscript
# MAIN PATH

Bob angry M
I am angry right now.

Alice angry M
I am also angry right now.

Richard angry M
I am semi-angry right now.

Fanagle happy M
I am anti-angry right now.

Eric happy M
I am okay-angry right now.

Bob angry C
I am angry right now. Are you?
Yes -> FRIENDSHIP
No -> FIGHT
Maybe -> IGNORE
END

# FIGHT PATH

Bob pissed M FIGHT
Okay then, FIGHT!

Bob pissed M FIGHT
TIME TO BOX.

# FRIENDSHIP PATH

Bob pissed M FRIENDSHIP
Okay then, FRIEND!

Bob pissed M FRIENDSHIP
TIME FOR SHOTS.

# IGNORE PATH

Bob pissed M IGNORE
...

Bob pissed M IGNORE
...hm?
